scaling according to time selection

--- a/public/about.html
+++ b/public/about.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+  <div><a href="/">Directed by Women</a></div>
+  
   <h3>About this page</h3>
 
   <p>
@@ -26,7 +28,7 @@
       <li>Movies with more than 3 directors</li>
       <li>Movies without a release-date</li>
       <li>Movies identified as adult content</li>
-      <li>Movies without an imdb_id<li>
+      <li>Movies without an imdb_id</li>
     </ul>
 
   </p>
