--- a/public/about.html
+++ b/public/about.html
@@ -29,6 +29,7 @@
       <li>Movies without a release-date</li>
       <li>Movies identified as adult content</li>
       <li>Movies without an imdb_id</li>
+      <li>Voice acting</li>
     </ul>
 
   </p>
